# nulltty

./: .gitignore  COPYING  Makefile.am  README.markdown  acinclude.m4  configure.ac  stubs.h
lib/: .gitignore  Makefile.am  sigwaitinfo.c
man/: nulltty.1
src/: .gitignore  Makefile.am  nulltty.c  ptys.c  ptys.h
test/: .gitignore  Makefile.am  check_relay.c  nulltty_child.c  nulltty_child.h
